--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <h1><%= link_to('Joshbook', root_path) %></h1>
+
+    <%= render 'devise/menu/login_items' %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
