Change login -> sign in
Add feature test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <h1><%= link_to('Joshbook', root_path) %></h1>
 
-    <%= render 'devise/menu/login_items' %>
+    <%= render 'devise/menu/sign_in_items' %>
 
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
