--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <h2>Latest posts</h2>
 
-<% @posts.each do |post| %>
-  <p><%= post.message %></p>
-<% end %>
-
 <%= link_to new_post_path do %>
   New post
+<% end %>
+
+<% @posts.each do |post| %>
+  <p class="post"><%= post.message %></p>
 <% end %>
